Apply root window transform to event location in VizHitTestDrawQuad.

On ChromeOS, we can apply transform to the root window, e.g. rotation.
Before sending an event location to HitTestQuery for targeting, we need
to account for this transform so that the location is correctly in the
coordinate space of the root surface.

This CL updates GetOffsetFromRootSurface to be
TransformPointToRootSurface - instead of just getting the offset from
RenderWidgetHostView to root surface, we pass the point to different
RenderWidgetHostView implementations so that RenderWidgetHostViewAura
can apply root window's transform to the point, other implementations
remain the same.

Bug: 860356
Test: site_per_process_hit_test_browsertest
Change-Id: Ieed02489c9a225fbb7a4f7a42a9788878079acb1
Reviewed-on: https://chromium-review.googlesource.com/1140926
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Ria Jiang <riajiang@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#576662}
Reviewed-on: https://chromium-review.googlesource.com/1149200
Reviewed-by: Ria Jiang <riajiang@chromium.org>
Cr-Commit-Position: refs/branch-heads/3440@{#747}
Cr-Branched-From: 010ddcfda246975d194964ccf20038ebbdec6084-refs/heads/master@{#561733}