content/browser/renderer_host/render_widget_host_view_android.cc
@@ -1513,8 +1513,9 @@ void RenderWidgetHostViewAndroid::EvictDelegatedFrame() {
   DestroyDelegatedContent();
 }
 
-gfx::Vector2d RenderWidgetHostViewAndroid::GetOffsetFromRootSurface() {
-  return gfx::Vector2d(
+void RenderWidgetHostViewAndroid::TransformPointToRootSurface(
+    gfx::PointF* point) {
+  *point += gfx::Vector2d(
       0, DoBrowserControlsShrinkBlinkSize() ? GetTopControlsHeight() : 0);
 }
 
